--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,3 +9,18 @@ h1 span {
 .big-emoji {
   font-size: x-large;
 }
+
+nav {
+  margin: auto;
+  width: fit-content;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  padding: 0;
+}
+
+nav ul li {
+  margin: 0 2em;
+}
