--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,26 +1,26 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
-h1 span {
-  color: red; 
+#twentytwenty-header span {
+    color: red;
 }
 
 .big-emoji {
-  font-size: x-large;
+    font-size: x-large;
 }
 
 nav {
-  margin: auto;
-  width: fit-content;
+    margin: auto;
+    width: fit-content;
 }
 
 nav ul {
-  list-style: none;
-  display: flex;
-  padding: 0;
+    list-style: none;
+    display: flex;
+    padding: 0;
 }
 
 nav ul li {
-  margin: 0 2em;
+    margin: 0 2em;
 }
