--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,10 @@
     text-align: center;
 }
 
+#twentytwenty-header{
+    color: black;
+    font-size: 2em;
+}
 #twentytwenty-header span {
     color: red;
 }
@@ -23,4 +27,9 @@ nav ul {
 
 nav ul li {
     margin: 0 2em;
+}
+
+/* TEMP!! */
+img {
+    max-height: 300px;
 }
