--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,44 @@
+/* baseline styles */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  vertical-align: baseline;
+}
+
+body {
+  line-height: 1;
+}
+
+ul {
+    list-style: none;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+}
+
+
+
+/*  app styles */
 .App {
     text-align: center;
 }
@@ -5,6 +46,7 @@
 #twentytwenty-header{
     color: black;
     font-size: 2em;
+    padding: 0.5em;
 }
 #twentytwenty-header span {
     color: red;
@@ -17,19 +59,14 @@
 nav {
     margin: auto;
     width: fit-content;
+    padding: 1em;
 }
 
 nav ul {
-    list-style: none;
     display: flex;
     padding: 0;
 }
 
 nav ul li {
     margin: 0 2em;
-}
-
-/* TEMP!! */
-img {
-    max-height: 300px;
 }
