--- a/client/src/containers/Slides.css
+++ b/client/src/containers/Slides.css
@@ -1,8 +1,43 @@
-h1 {
-    font-size: 4em;
+.long-text {
+    font-size: 2em;
+    text-align: left;
+    min-width: 50vw
 }
 
-.long-text {
-    font-size: x-large;
-    text-align: left;
+.slide-title {
+    font-size: 5em;
+    padding: 0.5em;
+    min-height: 1.4em;
+}
+
+#slide-main {
+    line-height: 8em;
+}
+
+.slide-images {
+    float: left;
+    vertical-align: middle;
+}
+
+.slide-images img {
+    max-height: 70vh;
+    max-width: 45vw;
+}
+
+.end {
+    padding: 2em;
+}
+
+.end h2 {
+    margin: 2em;
+    line-height: 30vh;
+}
+
+.end h1 {
+    line-height: 5vh;
+    font-size: 5em;
+}
+
+.end .big-emoji {
+    font-size: 4em;
 }
